--- a/main.css
+++ b/main.css
@@ -1,30 +1,50 @@
-body {
-  overflow: hidden;
-  margin: 0;
+canvas {
+border: none;
 
+}
+body{
+margin:0;
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
+from {
+opacity: 0;
+}
+to {
+opacity: 1;
+}
 }
 @keyframes wait {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 1;
-  }
+from {
+opacity: 1;
+}
+to {
+opacity: 1;
+}
 }
 @keyframes fadeOut {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 0;
-  }
+from {
+opacity: 1;
+}
+to {
+opacity: 0;
+}
+}
+.site-footer {
+position:fixed;
+left: 0;
+bottom: 0;
+width: 100%;
+background-color: darkgrey;
+color: white;
+text-align: center;
+font-family: 'Noto Sans', sans-serif;
+}
+
+.site-header {
+margin-left: 50px;
+margin-top: 30px;
+position:fixed;
+font-family: 'Noto Sans', sans-serif;
+color: cornflowerblue;
 }
